--- a/HomeBase/app/build.gradle
+++ b/HomeBase/app/build.gradle
@@ -7,9 +7,10 @@ repositories {
 android {
     compileSdkVersion 30
     buildToolsVersion '30.0.2'
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 23
         targetSdkVersion 30
         multiDexEnabled true
         ndk {
@@ -61,7 +62,6 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.squareup:otto:1.3.8'
     implementation('com.dji:dji-sdk:4.15', {
@@ -72,14 +72,9 @@ dependencies {
          * Both will greatly reducing the size of the APK.
          */
         exclude module: 'library-anti-distortion'
-        //exclude module: 'fly-safe-database'
+        exclude module: 'fly-safe-database'
     })
     compileOnly 'com.dji:dji-sdk-provided:4.15'
-
-    androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testImplementation 'junit:junit:4.13.2'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core:1.3.2'
