--- a/HomeBase/app/build.gradle
+++ b/HomeBase/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 repositories {
     mavenLocal()
@@ -10,7 +11,7 @@ android {
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 30
         multiDexEnabled true
         ndk {
@@ -82,4 +83,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'com.mapbox.maps:android:10.4.0'
+    implementation "com.google.android.gms:play-services-location:19.0.1"
 }
