--- a/HomeBase/app/src/main/AndroidManifest.xml
+++ b/HomeBase/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.SARLUAP.BaseStation">
+    package="com.sarLuap.baseStation">
 
     <!-- Permissions and features -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
@@ -47,7 +48,7 @@
 
         <meta-data
             android:name="com.dji.sdk.API_KEY"
-            android:value="f0f6df1993d796f6873d0e79" />
+            android:value= "@string/DJIAPI" />
 
         <service android:name="dji.sdk.sdkmanager.DJIGlobalService"
             tools:ignore="Instantiatable">
@@ -55,7 +56,7 @@
         <!-- DJI SDK -->
 
         <activity
-            android:name=".activate_app"
+            android:name=".ActivateApp"
             android:configChanges="orientation"
             android:screenOrientation="landscape">
 
@@ -72,8 +73,13 @@
                 android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
                 android:resource="@xml/accessory_filter" />
         </activity>
+
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="landscape" />
+
+        <activity
+            android:name=".LiveMapActivity"
             android:screenOrientation="landscape" />
     </application>
 
