--- a/Onboard-computer/package.xml
+++ b/Onboard-computer/package.xml
@@ -52,6 +52,7 @@
   <build_depend>dji_sdk</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>roslaunch</build_depend>
   <exec_depend>dji_sdk</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>message_runtime</exec_depend>
