update with GPS and smooth movement #57

--- a/Onboard-computer/CMakeLists.txt
+++ b/Onboard-computer/CMakeLists.txt
@@ -56,6 +56,8 @@ set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
+  coordinates.msg
+  rel_coordinates.msg
   directions.msg
   status.msg
   send_mobile.msg
